--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ include = ["src/**/*", "README.md", "LICENSE", "Cargo.lock", "Cargo.toml"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mdbook = { version = "0.4.35", features = [] }
-regex = "1.10.2"
-serde_json = "1.0.108"
+env_logger = "0.11.8"
+log = "0.4.28"
+mdbook-preprocessor = "0.5.1"
+regex = "1.12.2"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
